--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -3,6 +3,7 @@
     "main.js": {
       "files": [
         "scripts/main.js"
+       
       ],
       "main": true
     },
@@ -19,7 +20,10 @@
     },
     "jquery.js": {
       "bower": ["jquery"]
-    }
+    },
+     "uikit.js": {
+      "bower": ["uikit"]
+     }
   },
   "config": {
     "devUrl": "http://tpp/"
