fix uikit into bower grid styles as @extend

--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    
+    "uikit": "^2.25.0"
   },
-  "overrides": {
-    
-  }
+  "overrides": {}
 }
