Banner, Basic tabs, headers.

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -20,6 +20,6 @@
     }
   },
   "config": {
-    "devUrl": "http://tpp/"
+    "devUrl": "http://localhost:8888/thepathologypartnership.co.uk"
   }
 }
